--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-$color-primary: #ba2329;
+$color-primary: #ff6600;
 $color-secondary: #007ddb;
-$color-bg: #ffffe4;
+$white: #ffffff;
 $black: #17171c;
 
 $max-width: 1260px;
