--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,7 +1,6 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  word-spacing: 1px;
+  font-size: 16px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
@@ -14,6 +13,12 @@ html {
 *::after {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .container {
