Make StoryList responsive, cleanup + dark mode

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -19,6 +19,11 @@ html {
 body {
   margin: 0;
   padding: 0;
+
+  &.dark-mode {
+    background: #1a202c;
+    color: $white;
+  }
 }
 
 .container {
